welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: not found: value x
    x=0
    ^Diagonal:21: error: not found: value whie
    whie(y>0 && x<getMondeLargeur()-1){
    ^Diagonal:21: error: not found: value y
    whie(y>0 && x<getMondeLargeur()-1){
         ^Diagonal:21: error: not found: value x
    whie(y>0 && x<getMondeLargeur()-1){
                ^Diagonal:22: error: not found: value x
      x=x+1
      ^Diagonal:23: error: not found: value y
      y=y-1
      ^Diagonal:24: error: not found: value x
      setPos(x, y)
             ^Diagonal:24: error: not found: value y
      setPos(x, y)
                ^